Ignoring new folders and files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.htaccess
 .htaccess.sample
 .modgit/
 .modman/
@@ -54,21 +55,21 @@ js/scriptaculous/
 js/spacer.gif
 js/tiny_mce/
 js/varien/
-lib/3Dsecure/
-lib/Apache/
-lib/flex/
-lib/googlecheckout/
 lib/.htaccess
-lib/LinLibertineFont/
-lib/Mage/
-lib/PEAR/
-lib/Pelago/
-lib/phpseclib/
-lib/Varien/
-lib/Zend/
+lib/3Dsecure/
 lib/Cm/
 lib/Credis/
+lib/LinLibertineFont/
+lib/Mage/
 lib/Magento/
+lib/Net/
+lib/PEAR/
+lib/Pelago/
+lib/Unserialize/
+lib/Varien/
+lib/Zend/
+lib/flex/
+lib/phpseclib/
 LICENSE_AFL.txt
 LICENSE.html
 LICENSE.txt
